# charybdis

./: .travis.yml  README.md
construct/: construct.cc
extensions/: Makefile.am  Makefile.in  spamfilter.c  spamfilter.h  spamfilter_expr.c  spamfilter_nicks.c
include/: irc_btree23.h
include/ircd/: ircd.h  resource.h
include/ircd/m/: event.h
include/ircd/vm/: op.h  vm.h
ircd/: Makefile.am  aio.cc  aio.h  db.cc  info.cc  irc_btree23.c  ircd.cc  json.cc  resource.cc  vm.cc
ircd/m/: dbs.cc
modules/: Makefile.am  console.cc  m_presence.cc  vm.cc  vm_fetch.cc  webroot.cc
modules/client/: publicrooms.cc  sync.cc  sync.int.h
modules/client/directory/: room.cc
modules/client/rooms/: initialsync.cc  join.cc
modules/core/: m_message.c
modules/federation/: invite.cc
modules/media/: media.cc
